--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Isaias Burga - Full Stack Developer Portfolio</title>
+    <title>Wuidezon Burga - Full Stack Developer Portfolio</title>
     <meta name="description" content="Portfolio of Isaias Burga, Full Stack Developer specializing in React, TypeScript, and Node.js. View my projects and get in touch." />
     <meta name="author" content="Isaias Burga" />
 
